fix(megamenu): fix alignment issues in mobile nav on mobile devices

--- a/packages/styles/scss/components/masthead/_masthead-leftnav.scss
+++ b/packages/styles/scss/components/masthead/_masthead-leftnav.scss
@@ -145,23 +145,17 @@
         @include carbon--type-style(body-short-02);
 
         color: $text-01;
+        width: 100%;
+        text-overflow: ellipsis;
       }
     }
   }
 
   .#{$prefix}--side-nav__submenu {
-    display: flex;
-    flex-direction: column;
-
     .#{$prefix}--side-nav__submenu-content {
       width: 100%;
-      height: 100%;
+      height: rem(48px);
       display: flex;
-    }
-
-    &::after {
-      content: '';
-      width: 100%;
       border-bottom: 1px solid $ui-03;
     }
 
@@ -304,7 +298,7 @@
     width: 100%;
 
     .#{$prefix}--side-nav__link-text {
-      align-self: end;
+      align-self: start;
       margin-top: auto;
     }
 
@@ -332,10 +326,11 @@
     border-bottom: none;
   }
 
-  .#{$prefix}--masthead__side-nav__last-highlighted,
-  :host(#{$dds-prefix}-left-nav-menu[last-highlighted]) {
-    .#{$prefix}--side-nav__submenu::after {
-      content: none;
+  :host(#{$dds-prefix}-left-nav-menu[last-highlighted])
+    .#{$prefix}--side-nav__submenu,
+  .#{$prefix}--masthead__side-nav__last-highlighted {
+    .#{$prefix}--side-nav__submenu-content {
+      border-bottom: none;
     }
   }
 
